--- a/index.html
+++ b/index.html
@@ -8,16 +8,43 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="orange-highlight">Fazlul Hoque</span> Web Profile</h1>
+            <h1><span class="orange-highlight">Fazlul Hoque</span> Web</h1>
             <h3>World-class professional web dev</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/wpfazlu">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/profile1.png" alt="Fazlul Hoque Photo With Smile">
         </div>
-    </section>  
+    </section>
+    <section class="dream-section">
+        <div class="half-width">
+            <img src="images/profile2.png" alt="Fazlul Poses simply">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a web developer</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/wpfazlu">SEE MY RESUME</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <div class="half-width" id="full-stack">
+            <h2>Full Stack Web Developer</h2>
+            <h3>2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div class="half-width" id="baby-web">
+            <h2>Baby Web Developer</h2>
+            <h3>2020-2021 | Programming Hero Learner</h3>
+            <p>This was the most crucial experience with the Programming Hero team. They were helpful and dedicated to serve the students. It was the best platform to be a great web developer. I will recommend them without any hasitation.</p>
+        </div>
+    </section>
+    <footer>
+        <p>&copy Fazlul Hoque | 2020 All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
